--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -24,7 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.yiya.mobilesafe.activity.HomeActivity"></activity>
+        <activity
+            android:name="com.yiya.mobilesafe.activity.HomeActivity"
+            android:theme="@style/HomeTheme" >
+        </activity>
     </application>
 
 </manifest>
