--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,18 +17,16 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.yiya.mobilesafe.activity.SplashActivity"
-            android:label="@string/app_name"
-            android:theme="@style/SplashTheme" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.yiya.mobilesafe.activity.HomeActivity"
-            android:theme="@style/HomeTheme" >
+        <activity android:name="com.yiya.mobilesafe.activity.HomeActivity" >
         </activity>
+        <activity android:name="com.yiya.mobilesafe.activity.SettingActivity"></activity>
     </application>
 
 </manifest>
