--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -29,6 +30,8 @@
         <activity android:name="com.yiya.mobilesafe.activity.SettingActivity"></activity>
         <activity android:name="com.yiya.mobilesafe.activity.lostfound.OneActivity"></activity>
         <activity android:name="com.yiya.mobilesafe.activity.lostfound.TwoActivity"></activity>
+        <activity android:name="com.yiya.mobilesafe.activity.lostfound.ThreeActivity"></activity>
+        <activity android:name="com.yiya.mobilesafe.activity.lostfound.FourActivity"></activity>
     </application>
 
 </manifest>
