--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:allowBackup="true"
@@ -27,11 +28,24 @@
         </activity>
         <activity android:name="com.yiya.mobilesafe.activity.HomeActivity" >
         </activity>
-        <activity android:name="com.yiya.mobilesafe.activity.SettingActivity"></activity>
-        <activity android:name="com.yiya.mobilesafe.activity.lostfound.OneActivity"></activity>
-        <activity android:name="com.yiya.mobilesafe.activity.lostfound.TwoActivity"></activity>
-        <activity android:name="com.yiya.mobilesafe.activity.lostfound.ThreeActivity"></activity>
-        <activity android:name="com.yiya.mobilesafe.activity.lostfound.FourActivity"></activity>
+        <activity android:name="com.yiya.mobilesafe.activity.SettingActivity" >
+        </activity>
+        <activity android:name="com.yiya.mobilesafe.activity.lostfound.OneActivity" >
+        </activity>
+        <activity android:name="com.yiya.mobilesafe.activity.lostfound.TwoActivity" >
+        </activity>
+        <activity android:name="com.yiya.mobilesafe.activity.lostfound.ThreeActivity" >
+        </activity>
+        <activity android:name="com.yiya.mobilesafe.activity.lostfound.FourActivity" >
+        </activity>
+        <activity android:name="com.yiya.mobilesafe.activity.lostfound.LastActivity" >
+        </activity>
+
+        <receiver android:name="com.yiya.mobilesafe.activity.broadcastreceive.LostBroadcastReceive" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
