activity启动必须通过startactivity方法启动才能调用其中的方法,不能自己new对象调用

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,6 +42,8 @@
         </activity>
         <activity android:name="com.yiya.mobilesafe.activity.lostfound.LastActivity" >
         </activity>
+        <activity android:name="com.yiya.mobilesafe.utils.GetAdmin" >
+        </activity>
         <!-- bootcompleted broadcastreceive -->
         <receiver android:name="com.yiya.mobilesafe.activity.broadcastreceive.LostBroadcastReceive" >
             <intent-filter>
