--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,11 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="com.yiya.mobilesafe" >
+    </instrumentation>
+
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
@@ -19,6 +24,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="android.test.runner" />
+
         <activity
             android:name="com.yiya.mobilesafe.activity.SplashActivity"
             android:label="@string/app_name" >
@@ -43,6 +50,8 @@
         <activity android:name="com.yiya.mobilesafe.activity.lostfound.LastActivity" >
         </activity>
         <activity android:name="com.yiya.mobilesafe.utils.GetAdmin" >
+        </activity>
+        <activity android:name="com.yiya.mobilesafe.activity.defend.DefendActivity" >
         </activity>
         <!-- bootcompleted broadcastreceive -->
         <receiver android:name="com.yiya.mobilesafe.activity.broadcastreceive.LostBroadcastReceive" >
