编写黑名单服务进程

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -80,6 +80,9 @@
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
             </intent-filter>
         </receiver>
+
+        <service android:name="com.yiya.mobilesafe.activity.services.BlackNumberService" >
+        </service>
     </application>
 
 </manifest>
