--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,10 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-
+	
+            
+    <uses-permission android:readPermission="android.permission.READ_CONTACTS" />
+    <uses-permission android:writePermission="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
